Making dynamic GUI and fixing setup

--- a/setup.cfg
+++ b/setup.cfg
@@ -17,14 +17,13 @@ install_requires =
     scipy
     matplotlib
     joblib
-    Pillow
 
 [options.package_data]
 * = data/*.txt, LICEM/*.jpg, results/*.json
 
 [options.entry_points]
 console_scripts =
-    run_battery_OCV_decomposition = src.battery_OCV_decomposition.GUI:main
+    run_battery_OCV_decomposition = battery_OCV_decomposition.GUI:main
 
 [metadata.classifiers]
 Development Status :: 3 - Alpha
