--- a/setup.cfg
+++ b/setup.cfg
@@ -33,5 +33,5 @@ battery_OCV_decomposition =
     results/*.json
 
 [options.entry_points]
-console_scripts =
-    run_battery_OCV_decomposition = battery_OCV_decomposition.GUI:main
+gui_scripts =
+    run_GUI = battery_OCV_decomposition.GUI:OCVBatteryDecompositionGUI
