--- a/setup.cfg
+++ b/setup.cfg
@@ -34,4 +34,4 @@ battery_OCV_decomposition =
 
 [options.entry_points]
 gui_scripts =
-    run_GUI = src.GUI:OCVBatteryDecompositionGUI
+    run_GUI = GUI:OCVBatteryDecompositionGUI
